objects/Fiche_projet__c.object
<CustomObject>
    <fields>
        <fullName>Avancement__c</fullName>
        <inlineHelpText>% d&apos;avancement du développement / configuration</inlineHelpText>
        <label>% Avancement</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Charge_Analyse_J__c</fullName>
        <formula>Charge_J__c * 15/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Analyse et spécifications (7% du build)</inlineHelpText>
        <label>Charge (Analyse J)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Euro__c</fullName>
        <formula>(Charge_Analyse_J__c  * 750) + ( Charge_J__c * 490) + ( Charge_Tests_J__c * 490 * 80/100) + ( Charge_Tests_J__c * 750* 20/100)  + ( Charge_PM_J__c * 980)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Analyse : 750 €
Build : 490 €
Tests : 490 80% + 750 20%
PM : 980 €</inlineHelpText>
        <label>Charge (€)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_J__c</fullName>
        <inlineHelpText>Charge de développement / configuration en jours
Unité : 0,1</inlineHelpText>
        <label>Charge (J)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_PM_J__c</fullName>
        <formula>Charge_J__c * 15/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gestion de projet (15% du build)</inlineHelpText>
        <label>Charge (PM J)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Tests_J__c</fullName>
        <formula>Charge_J__c * 7/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recette utilisateur (7% du build)</inlineHelpText>
        <label>Charge (Tests J)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Total_J__c</fullName>
        <formula>Charge_Analyse_J__c + Charge_J__c  +  Charge_Tests_J__c + Charge_PM_J__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge (Total J)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_de_fermeture__c</fullName>
        <description>Lecture seule. Alimentée par workflow...</description>
        <label>Date de fermeture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_en_prod__c</fullName>
        <label>Date en prod</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_en_test__c</fullName>
        <inlineHelpText>Date à renseigner exclusivement par Kerensen</inlineHelpText>
        <label>Date en test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_limite__c</fullName>
        <inlineHelpText>Date à renseigner exclusivement par le client</inlineHelpText>
        <label>Date limite</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domaine__c</fullName>
        <label>Domaine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activité</fullName>
                </value>
                <value>
                    <fullName>Campagne</fullName>
                </value>
                <value>
                    <fullName>Chantier</fullName>
                </value>
                <value>
                    <fullName>Configurateur</fullName>
                </value>
                <value>
                    <fullName>Contrat</fullName>
                </value>
                <value>
                    <fullName>Courrier</fullName>
                </value>
                <value>
                    <fullName>CTI</fullName>
                </value>
                <value>
                    <fullName>Devis</fullName>
                </value>
                <value>
                    <fullName>Formation</fullName>
                </value>
                <value>
                    <fullName>Foyer</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Opération</fullName>
                </value>
                <value>
                    <fullName>Profils</fullName>
                </value>
                <value>
                    <fullName>Projet</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Requête</fullName>
                </value>
                <value>
                    <fullName>Sécurité</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&quot;https://cs7.salesforce.com/&quot; &amp;  Id &amp; &quot;/e&quot;, &quot;Edit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>En_retard__c</fullName>
        <formula>IF (
	ISPICKVAL(Statut__c, &quot;Fermé&quot;),
	IF (
		Date_de_fermeture__c &gt; Date_limite__c + 5,
		IMAGE(&quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000JO69&amp;oid=00Dd0000000ciwW&quot;,&quot;Rouge&quot;),
		IF (	
			Date_de_fermeture__c &gt; Date_limite__c,
			IMAGE(&quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000JO5o&amp;oid=00Dd0000000ciwW&quot;,&quot;Orange&quot;),
			IF (
				Date_de_fermeture__c &lt;= Date_limite__c,
				IMAGE(&quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000JO6E&amp;oid=00Dd0000000ciwW&quot;,&quot;Vert&quot;),
				&quot;&quot;
				)
		)
	),
	IF (
		TODAY() &gt; Date_en_test__c,
		IMAGE(&quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000JO69&amp;oid=00Dd0000000ciwW&quot;,&quot;Rouge&quot;),
		IF (
			TODAY() = Date_en_test__c,
			IMAGE(&quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000JO5o&amp;oid=00Dd0000000ciwW&quot;,&quot;Orange&quot;),
			IF (
			TODAY() &lt; Date_en_test__c,
			IMAGE(&quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000JO6E&amp;oid=00Dd0000000ciwW&quot;,&quot;Vert&quot;),
			&quot;&quot;
			)
		)	
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>- Rouge si fermé et (date fermeture &gt; date limite + 5) ou ouvert et today &gt; date test
- Orange si fermé et (date fermeture &gt; date limite) ou ouvert et today = date test
- Vert si fermé et (date fermeture &lt;= date limite) ou ouvert et today &lt; date test</inlineHelpText>
        <label>En retard ?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fait_en_production__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohez cette case si la modification a été reportée manuellement dans l&apos;environnement de production</inlineHelpText>
        <label>Fait en production ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiche_parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiche parent</label>
        <referenceTo>Fiche_projet__c</referenceTo>
        <relationshipLabel>Fiches projet</relationshipLabel>
        <relationshipName>Anomalies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Liste_des_modifications__c</fullName>
        <inlineHelpText>Décrire la liste des modifications de la configuration</inlineHelpText>
        <label>Liste des modifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lot 1</fullName>
                </value>
                <value>
                    <fullName>Lot 2</fullName>
                </value>
                <value>
                    <fullName>Lot 3</fullName>
                </value>
                <value>
                    <fullName>Lot 4</fullName>
                </value>
                <value>
                    <fullName>Lot 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origine__c</fullName>
        <inlineHelpText>Personne, réunion, contexte</inlineHelpText>
        <label>Origine</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pas_de_modification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pas de modification de la configuration (RV, workflow, champ...)</inlineHelpText>
        <label>Pas de modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priorite__c</fullName>
        <label>Priorité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processus__c</fullName>
        <formula>&quot;Si vous ne pouvez pas traiter la fiche, changez le statut, ajoutez une note et changez le propritétaire en cochant &apos;Notification par Email&apos;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profils_concernes__c</fullName>
        <label>Profils concernés</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profil 1</fullName>
                </value>
                <value>
                    <fullName>Profil 2</fullName>
                </value>
                <value>
                    <fullName>Profil 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_cahier_de_recette__c</fullName>
        <label>Référence cahier de recette</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_specifications__c</fullName>
        <label>Référence spécifications</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reproductible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reproductible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsable__c</fullName>
        <description>Alimenter ce champ automatiquement par une règle de workflow en fonction du propriétaire.
NE PAS OUBLIER DE METTRE EN PLACE LES FILES D&apos;ATTENTE</description>
        <inlineHelpText>Alimenter ce champ automatiquement par une règle de workflow en fonction du propriétaire.
NE PAS OUBLIER DE METTRE EN PLACE LES FILES D&apos;ATTENTE</inlineHelpText>
        <label>Responsable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Kerensen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risque_planning__c</fullName>
        <formula>IF (
	ISPICKVAL(Statut__c, &quot;Réalisé&quot;) || 
	ISPICKVAL(Statut__c, &quot;A préciser&quot;) ||  
	ISPICKVAL(Statut__c, &quot;A arbitrer&quot;) ||  
	(text(Date_limite__c) &lt;&gt; &quot;&quot; &amp;&amp; (TODAY() +  Charge_J__c = Date_limite__c)) ,  
	IMAGE(&quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000JO5z&amp;oid=00Dd0000000ciwW&quot;, &quot;Orange&quot;),
	IF (
		ISPICKVAL(Statut__c, &quot;Fermé&quot;) || 
		ISPICKVAL(Statut__c, &quot;Abandonné&quot;) ||  
		(text(Date_limite__c) &lt;&gt; &quot;&quot; &amp;&amp; (TODAY() +  Charge_J__c &lt; Date_limite__c)) ,  
		IMAGE(&quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000JO64&amp;oid=00Dd0000000ciwW&quot;, &quot;Vert&quot;),
		IF (
			(text(Date_limite__c) &lt;&gt; &quot;&quot; &amp;&amp; (TODAY() +  Charge_J__c &gt; Date_limite__c)) ,  
			IMAGE(&quot;https://c.na14.content.force.com/servlet/servlet.ImageServer?id=015d0000000JO5u&amp;oid=00Dd0000000ciwW&quot;, &quot;Rouge&quot;),
			&quot;&quot;
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>- Vert : Fermé, abandonné, risque vert (auj + charge &lt; date limite)
- Orange : Réalisé (donc à tester avec risque de retour), A préciser, A arbitrer, risque orange (auj + charge = date limite)
- Rouge : Risque  rouge  (auj + charge &gt; date limite)</inlineHelpText>
        <label>Risque planning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_specifique__c</fullName>
        <label>Solution spécifique</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_standard__c</fullName>
        <label>Solution standard</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <inlineHelpText>Nouveau : statut des nouvelles fiches
A préciser : en attente d&apos;infos du client
En cours : une réponse / correction est en cours
Réalisé : la fiche a été réalisée et doit être testée
Fermé : la fiche est validée
Abandonné : la fiche est annulée</inlineHelpText>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nouveau</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>A préciser</fullName>
                </value>
                <value>
                    <fullName>A arbitrer</fullName>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Réalisé</fullName>
                </value>
                <value>
                    <fullName>Fermé</fullName>
                </value>
                <value>
                    <fullName>Abandonné</fullName>
                </value>
                <value>
                    <fullName>Validée EMLYON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut_specifications__c</fullName>
        <inlineHelpText>L&apos;anomalie nécessite une mise à jour</inlineHelpText>
        <label>Statut spécifications</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>A spécifier</fullName>
                </value>
                <value>
                    <fullName>Spécifications à jour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sujet__c</fullName>
        <externalId>true</externalId>
        <label>Sujet</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demande</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Anomalie</fullName>
                </value>
                <value>
                    <fullName>Evolution</fullName>
                </value>
                <value>
                    <fullName>Version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validee_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validée client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validee_par_Kerensen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validée par Kerensen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Fiche_projet__c.Type__c</field>
                <operation>equals</operation>
                <value>Version</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Fiche_projet__c</referenceTo>
        <relationshipLabel>Fiches projet</relationshipLabel>
        <relationshipName>Fiches_projet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_txt__c</fullName>
        <formula>Version__r.Sujet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version txt</label>
        <type>Text</type>
    </fields>
    <label>Fiche projet</label>
    <listViews>
        <fullName>Kerensen_config</fullName>
        <columns>NAME</columns>
        <columns>Priorite__c</columns>
        <columns>Lot__c</columns>
        <columns>Type__c</columns>
        <columns>Validee_par_Kerensen__c</columns>
        <columns>Sujet__c</columns>
        <columns>Date_limite__c</columns>
        <columns>Statut__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Charge_J__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Statut__c</field>
            <operation>notEqual</operation>
            <value>Fermé,Abandonné</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Version</value>
        </filters>
        <filters>
            <field>Responsable__c</field>
            <operation>equals</operation>
            <value>Kerensen</value>
        </filters>
        <label>2 - Ouvertes Kerensen</label>
    </listViews>
    <listViews>
        <fullName>X1_Ouvertes_Client</fullName>
        <columns>NAME</columns>
        <columns>Priorite__c</columns>
        <columns>Lot__c</columns>
        <columns>Type__c</columns>
        <columns>Validee_par_Kerensen__c</columns>
        <columns>Sujet__c</columns>
        <columns>Date_limite__c</columns>
        <columns>Statut__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Charge_J__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Statut__c</field>
            <operation>notEqual</operation>
            <value>Fermé,Abandonné</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Version</value>
        </filters>
        <filters>
            <field>Responsable__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>1 - Ouvertes Client</label>
    </listViews>
    <listViews>
        <fullName>X3_Mes_fiches</fullName>
        <columns>NAME</columns>
        <columns>Sujet__c</columns>
        <columns>Priorite__c</columns>
        <columns>Type__c</columns>
        <columns>Lot__c</columns>
        <columns>Validee_par_Kerensen__c</columns>
        <columns>Statut__c</columns>
        <columns>Date_limite__c</columns>
        <columns>Domaine__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Statut__c</field>
            <operation>notEqual</operation>
            <value>Fermé,Abandonné</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Version</value>
        </filters>
        <label>3 - Mes fiches ouvertes</label>
    </listViews>
    <listViews>
        <fullName>X4_VERSIONS</fullName>
        <columns>NAME</columns>
        <columns>Sujet__c</columns>
        <columns>Date_en_test__c</columns>
        <columns>Date_en_prod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Version</value>
        </filters>
        <label>4 - VERSIONS</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>X5_Toutes_les_actions</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Sujet__c</columns>
        <columns>Statut__c</columns>
        <columns>Priorite__c</columns>
        <columns>Date_limite__c</columns>
        <columns>En_retard__c</columns>
        <columns>Risque_planning__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Fiche_projet__c.Action</value>
        </filters>
        <label>5 - Toutes les actions</label>
    </listViews>
    <listViews>
        <fullName>X5_Toutes_les_fiches</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sujet__c</columns>
        <columns>Statut__c</columns>
        <columns>Priorite__c</columns>
        <columns>Date_limite__c</columns>
        <columns>En_retard__c</columns>
        <columns>Risque_planning__c</columns>
        <filterScope>Everything</filterScope>
        <label>5 - Toutes les fiches</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Numéro demande</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiches projet</pluralLabel>
    <recordTypes>
        <fullName>Action</fullName>
        <active>true</active>
        <description>Suivi des actions et des demandes</description>
        <label>Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Anomalie</fullName>
        <active>true</active>
        <description>Suivi des anomalies</description>
        <label>Anomalie</label>
    </recordTypes>
    <recordTypes>
        <fullName>Evolution</fullName>
        <active>true</active>
        <description>Suivi des évolutions (solutions std, spécifiques, arbitrage...)</description>
        <label>Evolution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Version</fullName>
        <active>true</active>
        <description>Organisation des fiches par montée de version</description>
        <label>Version</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Charge_et_date_test_a_renseigner</fullName>
        <active>false</active>
        <description>Veuillez renseigner la charge et la date en test</description>
        <errorConditionFormula>AND( $User.ByPassValidationRule__c =False,
TEXT( Responsable__c ) = &quot;Kerensen&quot; &amp;&amp; 
(TEXT( Date_en_test__c ) = &quot;&quot; ||  TEXT(Charge_J__c) = &quot;&quot;) &amp;&amp;
( $User.LastName = &quot;CONFIG&quot; || 
 $User.LastName = &quot;DEVELOPPEMENT&quot; || 
 $User.LastName = &quot;DEV (MAROC)&quot; || 
 $User.LastName = &quot;OMRAN&quot; || 
 $User.LastName = &quot;LE GRAND&quot;))</errorConditionFormula>
        <errorDisplayField>Date_en_test__c</errorDisplayField>
        <errorMessage>Veuillez renseigner la charge et la date en test</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_limite_a_renseigner</fullName>
        <active>false</active>
        <description>Veuillez renseigner la date limite</description>
        <errorConditionFormula>TEXT(Type__c) &lt;&gt; &quot;Version&quot; &amp;&amp; TEXT( Responsable__c ) = &quot;K par K&quot; &amp;&amp; TEXT(Date_limite__c) = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>Date_limite__c</errorDisplayField>
        <errorMessage>Veuillez renseigner la date limite</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_test_non_modifiable_par_K_par_K</fullName>
        <active>false</active>
        <description>La date en test n&apos;est modifiable que par les équipes de Kerensen</description>
        <errorConditionFormula>ISCHANGED( Date_en_test__c ) &amp;&amp;  $User.CompanyName = &quot;K par K&quot;</errorConditionFormula>
        <errorDisplayField>Date_en_test__c</errorDisplayField>
        <errorMessage>La date en test n&apos;est modifiable que par les équipes de Kerensen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Modification_config</fullName>
        <active>false</active>
        <description>Si le statut est réalisé, il faut indiquer les modifications</description>
        <errorConditionFormula>ISPICKVAL( Statut__c, &quot;Réalisé&quot;) &amp;&amp; ( Pas_de_modification__c = False &amp;&amp; Liste_des_modifications__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Pas_de_modification__c</errorDisplayField>
        <errorMessage>Veuillez renseigner l&apos;un des 2 champs &quot;Pas de modification&quot; ou &quot;Liste des modifications&quot;</errorMessage>
    </validationRules>
</CustomObject>